[gd_scene load_steps=36 format=3 uid="uid://dp4hwvodlqy42"]

[ext_resource type="Script" uid="uid://cei85aplr7aot" path="res://script/mainMenu.gd" id="1_2b2bh"]
[ext_resource type="Texture2D" uid="uid://df2yk7wn41xyt" path="res://src/img/Langit/1.png" id="2_3bexu"]
[ext_resource type="Texture2D" uid="uid://ckcmmhjuga2hx" path="res://src/img/Langit/2.png" id="3_w60jl"]
[ext_resource type="Texture2D" uid="uid://cuxxvjwu6om0q" path="res://src/img/Langit/3.png" id="4_w16bw"]
[ext_resource type="Texture2D" uid="uid://cw3h72nr0d2wp" path="res://src/img/Langit/4.png" id="5_5330x"]
[ext_resource type="PackedScene" uid="uid://crp0fg8rl3sp4" path="res://scene/teks_Sistem.tscn" id="7_2b2bh"]
[ext_resource type="FontFile" uid="uid://daglmw3nvfi7p" path="res://src/font/Pixel Game Font.otf" id="7_n0fxi"]
[ext_resource type="Texture2D" uid="uid://c8vvs56rrk4sj" path="res://src/img/ui/tombolKanan.png" id="8_w60jl"]
[ext_resource type="Texture2D" uid="uid://geocn6sc3tl5" path="res://src/img/ui/tombo;Kiri.png" id="9_w16bw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qbti"]
bg_color = Color(0.85882354, 0.13333334, 0.16470589, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(-2, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvr3l"]
bg_color = Color(0.078431375, 1, 0.96862745, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(-2, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k01lb"]
bg_color = Color(0.078431375, 1, 0.96862745, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(-2, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_462ap"]
bg_color = Color(0.9843137, 0.38039216, 0.02745098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(-2, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0g8r3"]
bg_color = Color(0.078431375, 1, 0.96862745, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(-2, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cb6ix"]
bg_color = Color(0.60933006, 0.6093301, 0.60933006, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(-2, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42d7r"]
bg_color = Color(0.60933006, 0.6093301, 0.60933006, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(-2, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sypnp"]
bg_color = Color(0.078431375, 1, 0.96862745, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(-2, 6)

[sub_resource type="Animation" id="Animation_5qbti"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Langit/TextureRect:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Langit/TextureRect:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Langit/TextureRect2:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Langit/TextureRect2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Langit/TextureRect3:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Langit/TextureRect3:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Langit/TextureRect4:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Langit/TextureRect4:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasModulate:color:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasModulate:color:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasModulate:color:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CanvasModulate:color:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("panah_preselect/kanan:position:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(332, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("panah_preselect/kiri:position:x")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(781, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_462ap"]
resource_name = "animasiLangit"
length = 7.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Langit/TextureRect:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 7)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Langit/TextureRect:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 7)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Langit/TextureRect2:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 7)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Langit/TextureRect2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 7)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Langit/TextureRect3:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.32166666, 0, 0.845, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.9333334, 7)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Langit/TextureRect3:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 44, -0.32166666, 0, 0.845, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.9333334, 7)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Langit/TextureRect4:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 2, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.49333334, 0, 0.67333335, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.96, 7)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Langit/TextureRect4:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 2, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 27, -0.49333334, 0, 0.67333335, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.96, 7)
}

[sub_resource type="Animation" id="Animation_w60jl"]
resource_name = "animasiPanah"
step = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panah_preselect/kanan:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(273, 0, 0, 0.083333336, 9.833334, 332, -0.25, 0, 0.25, 0, 273, 0, 0, 0.083333336, 9.833334),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panah_preselect/kiri:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(840, 0, 0, 0.083333336, -9.833334, 781, -0.25, 0, 0.25, 0, 840, 0, 0, 0.083333336, -9.833334),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_gvr3l"]
resource_name = "modulate"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.083333336, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasModulate:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.083333336, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasModulate:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.083333336, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasModulate:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gvr3l"]
_data = {
&"RESET": SubResource("Animation_5qbti"),
&"animasiLangit": SubResource("Animation_462ap"),
&"animasiPanah": SubResource("Animation_w60jl"),
&"modulate": SubResource("Animation_gvr3l")
}

[sub_resource type="Animation" id="Animation_w16bw"]
resource_name = "animasiPanah"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panah_preselect/kanan:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(273, 0, 0, 0.083333336, 9.833334, 332, -0.25, 0, 0.25, 0, 273, 0, 0, 0.083333336, 9.833334),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panah_preselect/kiri:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(840, 0, 0, 0.083333336, -9.833334, 781, -0.25, 0, 0.25, 0, 840, 0, 0, 0.083333336, -9.833334),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5330x"]
_data = {
&"animasiPanah": SubResource("Animation_w16bw")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w60jl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w16bw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5330x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dxm2u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0fxi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y40t8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ddov"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gvu6v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vw1al"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_usqrj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dwsq1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_2b2bh")

[node name="Langit" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Langit"]
offset_right = 1157.0
offset_bottom = 655.0
texture = ExtResource("2_3bexu")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Langit"]
offset_right = 1157.0
offset_bottom = 655.0
texture = ExtResource("3_w60jl")
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="Langit"]
offset_right = 1157.0
offset_bottom = 655.0
texture = ExtResource("4_w16bw")
metadata/_edit_use_anchors_ = true

[node name="TextureRect4" type="TextureRect" parent="Langit"]
offset_right = 1157.0
offset_bottom = 655.0
texture = ExtResource("5_5330x")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 361.0
offset_top = 257.0
offset_right = 751.0
offset_bottom = 537.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n0fxi")
theme_override_font_sizes/font_size = 65
theme_override_styles/normal = SubResource("StyleBoxFlat_5qbti")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_5qbti")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gvr3l")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_k01lb")
theme_override_styles/hover = SubResource("StyleBoxFlat_462ap")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_462ap")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0g8r3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_462ap")
theme_override_styles/disabled = SubResource("StyleBoxFlat_cb6ix")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_42d7r")
theme_override_styles/focus = SubResource("StyleBoxFlat_0g8r3")
text = "Start"

[node name="store" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n0fxi")
theme_override_font_sizes/font_size = 65
theme_override_styles/normal = SubResource("StyleBoxFlat_5qbti")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_5qbti")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gvr3l")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_k01lb")
theme_override_styles/hover = SubResource("StyleBoxFlat_462ap")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_462ap")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0g8r3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_462ap")
theme_override_styles/disabled = SubResource("StyleBoxFlat_cb6ix")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_42d7r")
theme_override_styles/focus = SubResource("StyleBoxFlat_sypnp")
text = "STORE"

[node name="our_profil" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n0fxi")
theme_override_font_sizes/font_size = 65
theme_override_styles/normal = SubResource("StyleBoxFlat_5qbti")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_5qbti")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gvr3l")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_k01lb")
theme_override_styles/hover = SubResource("StyleBoxFlat_462ap")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_462ap")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0g8r3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_462ap")
theme_override_styles/disabled = SubResource("StyleBoxFlat_cb6ix")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_42d7r")
theme_override_styles/focus = SubResource("StyleBoxFlat_sypnp")
text = "OUR PROFIL"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gvr3l")
}
autoplay = "animasiLangit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 171.5
offset_top = 61.0
offset_right = 940.5
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_n0fxi")
theme_override_font_sizes/font_size = 100
text = "cosmic rangers"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="CanvasLayer" parent="." instance=ExtResource("7_2b2bh")]
layout_mode = 1

[node name="panah_preselect" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="kanan" type="TextureRect" parent="panah_preselect"]
layout_mode = 0
offset_left = 332.0
offset_top = 302.0
offset_right = 372.0
offset_bottom = 342.0
texture = ExtResource("8_w60jl")

[node name="kiri" type="TextureRect" parent="panah_preselect"]
layout_mode = 0
offset_left = 781.0
offset_top = 302.0
offset_right = 821.0
offset_bottom = 342.0
texture = ExtResource("9_w16bw")

[node name="AnimationPlayer_preselect" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5330x")
}
autoplay = "animasiPanah"

[node name="tombolEasterEgg" type="Button" parent="."]
z_index = 25
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 473.0
offset_top = 140.0
offset_right = 517.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_w60jl")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_w16bw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5330x")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dxm2u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_n0fxi")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_y40t8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_0ddov")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_gvu6v")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vw1al")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_usqrj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dwsq1")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="focus_entered" from="VBoxContainer/start" to="." method="_on_start_focus_entered"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="focus_entered" from="VBoxContainer/store" to="." method="_on_store_focus_entered"]
[connection signal="pressed" from="VBoxContainer/store" to="." method="_on_store_pressed"]
[connection signal="focus_entered" from="VBoxContainer/our_profil" to="." method="_on_our_profil_focus_entered"]
[connection signal="pressed" from="VBoxContainer/our_profil" to="." method="_on_our_profil_pressed"]
[connection signal="pressed" from="tombolEasterEgg" to="." method="_on_tombol_easter_egg_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
